<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionHomeScreen"
        android:icon="@drawable/home_screen"
        android:title="@string/home_screen"
        app:showAsAction="never">

    </item>

    <item
        android:id="@+id/actionTasks"
        android:icon="@drawable/tasks"
        android:title="@string/tasks"
        app:showAsAction="never">

    </item>

    <item
        android:id="@+id/actionProfile"
        android:icon="@drawable/profile"
        android:title="@string/profile"
        app:showAsAction="never">

    </item>

    <item
        android:id="@+id/actionSettings"
        android:icon="@drawable/settings"
        android:title="@string/settings"
        app:showAsAction="never">

    </item>

    <item
        android:id="@+id/actionWastebasket"
        android:icon="@drawable/waste_basket"
        android:title="@string/wastebasket"
        app:showAsAction="never">

    </item>

    <item
        android:id="@+id/actionExit"
        android:icon="@drawable/close"
        android:title="@string/exit"
        app:showAsAction="never">

    </item>


</menu>